update test uc03 and uc14